# respace

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
docs/source/: conf.py  index.md  reference.md
docs/source/development/: contributing.md  index.rst  license.md
docs/source/getting_started/: basics.ipynb  index.rst  installation.md
docs/source/reference/: index.rst  metadata.rst  resultset.rst  typing.rst
src/respace/: __init__.py  _typing.py  parameters.py  result.py  utils.py
tests/: __init__.py  conftest.py  test_compute.py  test_constructors.py  test_io.py  test_parameter_handling.py  test_properties.py  test_tracking.py
